--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,9 +16,11 @@
 
 
         <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/img_background"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:importantForAccessibility="no"
+            android:scaleType="centerCrop"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -27,26 +29,27 @@
             />
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/txt_greetings"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:fontFamily="casual"
-            android:text="Happy Birthday, Sam"
+            android:text="@string/happy_birthday_text"
             android:textColor="@color/black"
-            android:textSize="36sp"
+            android:textSize="24sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/txt_sender"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
-            android:text="From Emma"
+            android:shadowColor="@color/purple_700"
+            android:text="@string/signature_text"
             android:textColor="#9C27B0"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
